# darc

./: .gitignore  CMakeLists.txt  README.md  license.txt  package.xml  stack.xml  stack.yaml
cmake/: darc-macros.cmake.in
doc/: example1.rst  example2.rst  example3.rst  example4.rst  index.rst
doc/code/: publisher_component.cpp  pubsub_node.cpp  subscriber_component.cpp
include/asmsg/: basic_local_dispatcher__fwd.hpp  dispatcher_group.hpp  local_dispatcher.hpp  local_dispatcher__fwd.hpp  message_packet.hpp  message_service.hpp  message_service__decl.hpp  publisher.hpp  publisher_decl.hpp  publisher_impl_decl.hpp  remote_dispatcher.hpp  subscribe_packet.hpp  subscriber.hpp
include/darc/: basic_local_dispatcher__fwd.hpp  component.h  component_ctrl_handle.h  component_fwd.h  component_loader.h  component_register.h  composition.h  ctrl_handle_base.h  darc.h  dispatcher_group.hpp  enable_safe_weak_ptr.h  enable_weak_from_static.h  entry.hpp  event_signal.h  exception.h  exception.hpp  fsm.hpp  id.h  id.hpp  id_arg.hpp  id_types.h  inbound_data.hpp  item.h  item_list.h  link_manager_abstract.h  listener_list.h  local_dispatch_handler.h  local_dispatcher.h  local_dispatcher.hpp  local_dispatcher__fwd.hpp  local_dispatcher_abstract.h  local_ns.hpp  local_tag.hpp  log.h  message_packet.hpp  message_service.hpp  message_service__decl.hpp  msg_wrapped.h  name_server.hpp  namespace_handle.hpp  (+51 more)
include/darc/buffer/: asio_buffer.hpp  auto_buffer.hpp  buffer.hpp  const_size_buffer.hpp  raw_buffer.hpp  shared_buffer.hpp  shared_buffer_arg.hpp
include/darc/distributed_container/: container_base.hpp  container_manager.hpp  control_packet.hpp  header_packet.hpp  published_set.hpp  shared_map.hpp  shared_map_connection.hpp  shared_map_connection__decl.hpp  shared_set.hpp  subscribed_set.hpp  update_packet.hpp
include/darc/network/: address_in_use_exception.hpp  disconnect_packet.hpp  discover_packet.hpp  discover_reply_packet.hpp  id_types.h  inbound_link.h  inbound_link_base.hpp  invalid_url_exception.h  invalid_url_exception.hpp  link_base.h  link_header_packet.hpp  link_manager.h  link_manager_abstract.h  link_manager_callback_if.h  link_manager_fwd.h  network_manager.hpp  payload_header_packet.hpp  protocol_manager_base.h  protocol_manager_base.hpp  service_header_packet.hpp
include/darc/ns/: local_tag.hpp  ns_service.hpp  tag_handle.hpp
include/darc/packet/: control.h  header.h  message.h  parser.h
include/darc/parameter/: component_parameter_source.h  group.h  manager.h  manager_fwd.h  parameter.h  parameter_abstract.h  parameter_change.h  parameter_source.h  parameter_source_abstract.h  parameter_value_abstract.h  parameter_value_impl.h
include/darc/parameter2/: group_fwd.h  parameter.h  parameter_abstract.h  parameter_source.h  parameter_source_abstract.h  parameter_value_abstract.h  status.h
include/darc/peer/: peer.hpp  peer_service.hpp
include/darc/procedure/: advertised_procedure_info.h  client.h  client_decl.h  client_impl.h  event_listener.h  id_types.h  local_dispatcher.h  local_dispatcher_abstract.h  local_dispatcher_fwd.h  local_dispatcher_manager.h  manager.h  manager_decl.h  manager_fwd.h  remote_dispatcher.h  server.h  server_decl.h  server_impl.h  system_state_interface.h
include/darc/publish/: list.h  local_dispatcher.h  local_dispatcher_abstract.h  local_dispatcher_manager.h  manager.h  publisher.h  publisher_impl.h  publisher_item.h  remote_dispatcher.h  remote_dispatcher_manager.h  subscriber.h  subscriber_impl.h  subscriber_item.h
include/darc/pubsub/: basic_local_dispatcher__fwd.hpp  callback_info.h  dispatcher_group.hpp  event_listener.h  fwd.h  i_manager_callback.h  id_types.h  list.h  local_dispatcher.h  local_dispatcher.hpp  local_dispatcher__fwd.hpp  local_dispatcher_abstract.h  local_dispatcher_fwd.h  manager.h  manager_decl.h  message_packet.hpp  message_service.hpp  message_service__decl.hpp  publish_packet.hpp  publisher.h  publisher.hpp  publisher_decl.hpp  publisher_impl.h  publisher_impl_decl.hpp  publisher_item.h  remote_dispatcher.h  remote_dispatcher.hpp  state_interface.h  subscribe_packet.hpp  subscriber.h  subscriber.hpp  subscriber_decl.h  subscriber_impl.h  subscriber_item.h  topic_info.h
include/darc/python/: proxy_base.h
include/darc/serializer/: boost.hpp  ros.hpp  std_pair_serialize.hpp
include/darc/statistics/: accumulator.h  callback_statistics.h  consumer.h  cpu_usage.h  thread_statistics.h
include/darc/system/: manager.h
include/darc/test/: callback_monitor.hpp  event_list.hpp  step.hpp  two_peer_sim.hpp
include/darc/timer/: deadline_timer.h  list.h  periodic_timer.h  periodic_timer_ctrl_handle.h  periodic_timer_impl.h  timer_list_ctrl_handle.h
include/ros/: component.h  event.h  msg_wrapped.h  node.h  publisher.h  remote_node.h  subscriber.h  subscriber_abstract.h  timer.h
pybindings/: CMakeLists.txt  darc_module.cpp  darc_node.py  darcit.py  module.cpp
share/: core-dependencies.rosinstall  darc.rosinstall  workspace.rosinstall
src/: component1.cpp  component2.cpp  component_ctrl_handle.cpp  component_register.cpp  container_base.cpp  container_manager.cpp  entry.cpp  id_arg.cpp  local_ns.cpp  local_tag.cpp  main.cpp  main2.cpp  message_service.cpp  node.cpp  node1.cpp  node2.cpp  node_ctrl_handle.cpp  ns_service.cpp  peer.cpp  peer_service.cpp  periodic_timer_ctrl_handle.cpp  py_node.py  remote_dispatcher.cpp  timer_list_ctrl_handle.cpp
src/lib/: component.cpp  component_register.cpp  id.cpp  id_arg.cpp  log.cpp  node.cpp  owner.cpp  primitive.cpp  registry.cpp  subcomponent_list.cpp  tag_manager.cpp
src/lib/peer/: peer.cpp  (+2 more)
src/network/: inbound_link_base.cpp  network_manager.cpp
src/pybindings/: CMakeLists.txt  darc.cpp  ipython_component.cpp
templates/: component_pybindings.template
test/: CMakeLists.txt  asmsg_gtest.cpp  darc_node.py  darc_pubsub_gtest.cpp  distributed_gtest.cpp  name_server_gtest.cpp  network_test.cpp  shared_map_gtest.cpp  shared_set_gtest.cpp  test_node.py  type_string_of_gtest.cpp
test/gtest/: buffer_gtest.cpp  pubsub_gtest.cpp
test/manual/: shutdown_test.cpp
(+62 files in other folders)
