<package>
  <name>darc_common</name>
  <version>0.0.1</version>
  <description>DARC Common Functionality</description>
  <author>Morten Kjaergaard</author>
  <maintainer email="none@none.com">Morten Kjaergaard</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>iris</build_depend>
  <build_depend>zeromq_catkin</build_depend>

  <run_depend>iris</run_depend>
  <run_depend>zeromq_catkin</run_depend>
</package>
