<package>
  <name>darc</name>
  <version>0.3.0</version>
  <description>DARC Distributed Asynchronous Reactive Components (aka. prototype of roscpp implementation using boost.asio)</description>
  <author>Morten Kjaergaard</author>
  <maintainer email="none@none.com">Morten Kjaergaard</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>iris</build_depend>
  <build_depend>zeromq_catkin</build_depend>

  <run_depend>iris</run_depend>
  <run_depend>zeromq_catkin</run_depend>
</package>
